# perihelion-auth-manger

./: .gitignore  .pre-commit-config.yaml  README.md  audit_event.py  git_credential_manager.py  logger.py  perihelion-auth-spec.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/branch-schemas/: .env.example  phase-1.json  phase-1.yaml
.github/branch-schemas/examples/: README.md
.github/branch-schemas/examples/patterns/: environment-stages.yaml  multi-phase.yaml  release-branches.yaml  simple-feature.yaml
.github/scripts/: requirements.txt  update_branch_hierarchy.py
.github/workflows/: update-branch-hierarchy.yml
docs/: development.md  perihelion-implementation-guide.md  perihelion-task-list.md
perihelion_auth_manager/tests/: test_audit.py
src/perihelion_auth_manager/: __init__.py  cli.py
src/perihelion_auth_manager/audit/: __init__.py  events.py  logger.py
src/perihelion_auth_manager/cli/: __init__.py  cli.py  entry_points.py
src/perihelion_auth_manager/crypto/: __init__.py  encryption.py  keys.py  memory.py
src/perihelion_auth_manager/security/: __init__.py
src/perihelion_auth_manager/storage/: __init__.py  base.py  linux.py  macos.py  windows.py
tests/: test_audit.py  test_cli.py  test_crypto.py  test_logger.py  test_storage.py
